Fix missing letter-spacing unit on announcement.

--- a/app/assets/stylesheets/redarrow.css
+++ b/app/assets/stylesheets/redarrow.css
@@ -145,7 +145,7 @@ p {
 
 #announcement {
 	font-family: 'Poiret One', sans-serif;
-	letter-spacing: 1.5;
+	letter-spacing: 1.5px;
 	font-size: 1.2em;
 	text-align: center;
 	border-bottom-left-radius: 6px;
